# open-energy-data-for-all

./: .gitignore  404.html  CODE_OF_CONDUCT.html  LICENSE.html  README.md  accessing-remote-data.html  accessing-remote-data.md  aio.html  assumptions.html  assumptions.md  automated-testing.html  automated-testing.md  big-data.html  big-data.md  build.R  coming-soon.html  coming-soon.md  config.yaml  data-environments.html  data-environments.md  data-validation.html  debugging.html  debugging.md  documentation.html  documentation.md  downloading-files-programmatically.html  downloading-files-programmatically.md  escape-from-jupyter.html  escape-from-jupyter.md  hot-takes.html  hot-takes.md  images.html  index.html  index.md  instructor-notes.html  introduction.html  introduction.md  key-points.html  learner-profiles.md  md5sum.txt  (+19 more)
checkpoints/: etl.ipynb  transform.ipynb
data/: eia923_2022.json  eia923_2022.xml  eia923_2022_sample.json  eia923_pr.xlsx  eia923_pr.xml  pr_gen_fuel_annual.parquet  pr_gen_fuel_monthly.parquet  raw_eia923__puerto_rico_generation_fuel  raw_eia923__puerto_rico_generation_fuel.parquet  raw_eia923__puerto_rico_plant_frame  raw_eia923__puerto_rico_plant_frame.parquet
episodes/: accessing-remote-data.md  assumptions.md  automated-testing.md  big-data.md  data-validation.md  debugging.md  downloading-files-programmatically.md  escape-from-jupyter.md  introduction.md  modularization-2.md  modularization.md  plotting.md  python-environments.md  scraping-data.md  visual-data-exploration.md  working-with-diverse-filetypes.md
instructor/: 404.html  (+29 more)
(+16 files in other folders)
